# APBPoster

./: .gitignore  README.md  conf.py  config_file.rst  customization.rst  example.ipynb  index.rst  installing.rst  keep_alive.rst  module_structure.rst  pass_by_ref.rst  render_binding_code.py  templated_classes.rst  useage.rst  wrapper_yaml.rst
.binder/: postBuild  start
CMake/: FormatListFile.cmake  GetAutoPybind11.cmake
advanced_examples/: CMakeLists.txt.in  README.md  advanced_examples.ipynb
advanced_examples/call_policy/: call_policy.hpp  call_policy_wrapper.yml
advanced_examples/class/: class.hpp  class_wrapper.yml
advanced_examples/constants_functions/: constants_and_functions.hpp  test_constants_and_functions.yml
advanced_examples/eigen/: eigen.hpp  eigen_wrapper.yml
advanced_examples/enum/: enum_wrapper.yml  test_enum.hpp
advanced_examples/local_binding/: local_bindings.hpp  local_bindings.yml
advanced_examples/multiple_inheritance/: multiple_inheritance.hpp  multiple_inheritance_wrapper.yml
doc/: getting_started.rst  templated_classes.rst  wrapper_yaml.rst
docs/: compiler_options.rst  conf.py  config_file.rst  customization.rst  index.rst  installing.rst  keep_alive.rst  pass_by_ref.rst  useage.rst  wrapper_yaml.rst
example/: CMakeLists.txt  example.ipynb  example_wrap.yml
example/src/: main.cpp
poster_helpers/: __init__.py  render_binding_code.py  setup_autobind.py
sample/: AutoPyBind11Test.ipynb  CMakeLists.txt.in  sample_conf.yml  sample_wrapper.yaml  setup_autobind.py
try_it/: CMakeLists.txt
(+4 files in other folders)
